<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.glowroot</groupId>
    <artifactId>glowroot-parent</artifactId>
    <version>0.12.0-SNAPSHOT</version>
    <relativePath>../../..</relativePath>
  </parent>

  <artifactId>glowroot-agent-http-client-plugin</artifactId>

  <name>Glowroot Agent Http Client Plugin</name>
  <description>Glowroot Agent Http Client Plugin</description>

  <properties>
    <!-- instrumented libraries -->
    <apache.httpclient.version>4.5.6</apache.httpclient.version>
    <apache.httpasyncclient.version>4.1.4</apache.httpasyncclient.version>
    <apache.httpclient3x.version>3.1</apache.httpclient3x.version>
    <apache.httpcore.version>4.4.10</apache.httpcore.version>
    <okhttpclient.version>2.7.5</okhttpclient.version>
    <!-- CXF 3.2.0+ requires Java 8+ -->
    <cxf.version>3.1.15</cxf.version>
    <!-- Spring 5+ requires Java 8+ -->
    <spring.version>4.3.19.RELEASE</spring.version>
    <axis.version>1.4</axis.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-plugin-api</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${apache.httpclient.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpasyncclient</artifactId>
      <version>${apache.httpasyncclient.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>${apache.httpclient3x.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.squareup.okhttp</groupId>
      <artifactId>okhttp</artifactId>
      <version>${okhttpclient.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-bindings-soap</artifactId>
      <version>${cxf.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <!-- new jaxb runtime is included below -->
          <groupId>com.sun.xml.bind</groupId>
          <artifactId>jaxb-impl</artifactId>
        </exclusion>
        <exclusion>
          <!-- new jaxb runtime is included below -->
          <groupId>com.sun.xml.bind</groupId>
          <artifactId>jaxb-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-frontend-jaxws</artifactId>
      <version>${cxf.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-transports-http</artifactId>
      <version>${cxf.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.cxf</groupId>
      <artifactId>cxf-rt-transports-http-jetty</artifactId>
      <version>${cxf.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>axis</groupId>
      <artifactId>axis</artifactId>
      <version>1.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- axis dependency -->
      <groupId>javax.xml.rpc</groupId>
      <artifactId>javax.xml.rpc-api</artifactId>
      <version>1.1.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- axis dependency -->
      <groupId>commons-discovery</groupId>
      <artifactId>commons-discovery</artifactId>
      <version>0.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- don't use netty based http server for testing b/c then potential version conflicts -->
      <groupId>org.nanohttpd</groupId>
      <artifactId>nanohttpd</artifactId>
      <version>2.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- executor plugin is included to test suppression of "wait for future" timer
        and also to test that it has no other adverse effects -->
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-executor-plugin</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
      <version>${apache.httpcore.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>7.0-beta</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <!-- this is just so eclipse will use Java 7 for this module, since Java 7 is needed for
            running the tests against the latest versions of okhttp and cxf -->
          <artifactId>maven-compiler-plugin</artifactId>
          <executions>
            <execution>
              <id>default-testCompile</id>
              <configuration>
                <source>1.7</source>
                <target>1.7</target>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>auto-activated-test-unshaded</id>
      <activation>
        <property>
          <name>!glowroot.test.shaded</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.glowroot</groupId>
          <artifactId>glowroot-agent-it-harness-unshaded</artifactId>
          <version>${project.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>auto-activated-test-shaded</id>
      <activation>
        <property>
          <name>glowroot.test.shaded</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.glowroot</groupId>
          <artifactId>glowroot-agent-it-harness</artifactId>
          <version>${project.version}</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <!-- exclusion is needed due to https://issues.apache.org/jira/browse/MSHADE-206 -->
              <groupId>org.glowroot</groupId>
              <artifactId>glowroot-agent-it-harness-unshaded</artifactId>
            </exclusion>
            <exclusion>
              <!-- exclusion is needed due to https://issues.apache.org/jira/browse/MSHADE-206 -->
              <groupId>org.glowroot</groupId>
              <artifactId>glowroot-agent-core</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>not-force-java6</id>
      <activation>
        <property>
          <name>!glowroot.forceJava6</name>
        </property>
      </activation>
      <dependencies>
        <!-- these dependencies require Java 7+ -->
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>2.3.1</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>javax.xml.ws</groupId>
          <artifactId>jaxws-api</artifactId>
          <version>2.3.1</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>javax.jws</groupId>
          <artifactId>jsr181-api</artifactId>
          <version>1.0-MR1</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>javax.annotation</groupId>
          <artifactId>javax.annotation-api</artifactId>
          <version>1.3.2</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>org.glassfish.jaxb</groupId>
          <artifactId>jaxb-runtime</artifactId>
          <version>2.3.0.1</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <!-- this is needed for running tests on Java 9 -->
          <groupId>com.sun.activation</groupId>
          <artifactId>javax.activation</artifactId>
          <version>1.2.0</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>force-java6</id>
      <activation>
        <property>
          <name>glowroot.forceJava6</name>
        </property>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <artifactId>maven-compiler-plugin</artifactId>
              <executions>
                <execution>
                  <id>default-testCompile</id>
                  <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                  </configuration>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>java6or7</id>
      <activation>
        <jdk>[1.6,1.8)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <!-- this is needed when building with Java 6 or 7 -->
              <argLine>-XX:MaxPermSize=128m</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>async-http-client-2.x</id>
      <properties>
        <asynchttpclient.version>2.0.37</asynchttpclient.version>
        <!-- this is needed because netty version is dependency managed in the parent pom -->
        <netty.version>4.0.52.Final</netty.version>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.asynchttpclient</groupId>
          <artifactId>async-http-client</artifactId>
          <version>${asynchttpclient.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>generate-test-sources</phase>
                <goals>
                  <goal>add-test-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>src/test/async-http-client-2.x/java</source>
                  </sources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>async-http-client-1.x</id>
      <properties>
        <asynchttpclient.version>1.9.40</asynchttpclient.version>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.ning</groupId>
          <artifactId>async-http-client</artifactId>
          <version>${asynchttpclient.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>generate-test-sources</phase>
                <goals>
                  <goal>add-test-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>src/test/async-http-client-1.x/java</source>
                  </sources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>apache-httpclient-pre-4.2</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <testExcludes>
                <exclude>
                  org/glowroot/agent/plugin/httpclient/ApacheHttpAsyncClientPluginIT.java
                </exclude>
              </testExcludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>cxf-2.x</id>
      <dependencies>
        <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-web</artifactId>
          <version>2.0.8</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-rt-transports-http-jetty</artifactId>
          <version>${cxf.version}</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-jdk14</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <testExcludes>
                <exclude>org/glowroot/agent/plugin/httpclient/RestTemplatePluginIT.java</exclude>
              </testExcludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
